<resources>
    <string name="app_name">ZenPlan</string>
    <string name="menu_item_profile">PROFILE</string>
    <string name="menu_item_todos">TODOS</string>
    <string name="menu_item_analytics">ANALYTICS</string>

    <string name="profile_title">My profile</string>
    <string name="todo_title">My todos</string>
    <string name="stats_title">My stats</string>
    <string name="new_title">New todo</string>

    <string name="profile_password">Change my password</string>
    <string name="profile_language">Change the language</string>
    <string name="profile_account">Delete my account</string>
    <string name="profile_disconnect">Disconnect</string>

    <string name="stats_week"><u>Weekly</u></string>
    <string name="stats_month">Monthly</string>
    <string name="stats_doing">You are doing great with</string>
    <string name="stats_yoga">Yoga</string>
    <string name="stats_cooking">Cooking</string>
    <string name="stats_focus">You should focus on</string>
    <string name="stats_reading">Reading</string>
    <string name="stats_shopping">Shopping</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>