<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical" android:layout_marginLeft="20dp" android:layout_marginRight="20dp">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/stats_title"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/textDark"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/raleway_medium"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="35dp"
            tools:layout_editor_absoluteY="76dp">
        <TextView
                android:text="@string/stats_week"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:textSize="22sp"
                android:fontFamily="@font/raleway_bold"
                android:textStyle="bold"
                android:textColor="@color/colorPrimaryDark"
                android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"/>
        <TextView
                android:text="@string/stats_month"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:textSize="22sp"
                android:fontFamily="@font/raleway_bold"
                android:textStyle="bold"
                android:textColor="@color/textMediumDark"
                android:layout_weight="1"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toEndOf="@+id/textView7"
                android:layout_marginStart="16dp"/>
    </android.support.constraint.ConstraintLayout>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent">
        <ImageView
                android:layout_width="355dp"
                android:layout_height="259dp"
                app:srcCompat="@drawable/stats_week"
                android:id="@+id/imageView"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="8dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
        />
        <TextView
                android:text="@string/stats_doing"
                android:textSize="22sp"
                android:textColor="@color/textMediumDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:fontFamily="@font/raleway_bold"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="18dp"
                app:layout_constraintTop_toBottomOf="@+id/imageView"/>
        <TextView
                android:text="@string/stats_yoga"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_height="wrap_content"
                android:textSize="18sp"
                android:id="@+id/textView9"
                android:fontFamily="@font/raleway_bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/stats_cooking"
                android:textColor="@color/colorPrimaryDark"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView10"
                android:textSize="18sp"
                android:fontFamily="@font/raleway_bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:layout_constraintStart_toEndOf="@+id/textView9"
                android:layout_marginStart="22dp"/>
        <TextView
                android:textColor="@color/textMediumDark"
                android:text="@string/stats_focus"
                android:textSize="22sp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView11"
                android:fontFamily="@font/raleway_bold"
                android:layout_marginTop="35dp"
                app:layout_constraintTop_toBottomOf="@+id/textView10"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/stats_reading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:id="@+id/textView12"
                android:textSize="18sp"
                android:fontFamily="@font/raleway_bold"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"/>
        <TextView
                android:text="@string/stats_shopping"
                android:layout_width="wrap_content"
                android:textColor="@color/colorPrimaryDark"
                android:layout_height="wrap_content"
                android:id="@+id/textView13"
                android:textSize="18sp"
                android:layout_marginTop="8dp"
                android:fontFamily="@font/raleway_bold"
                app:layout_constraintTop_toBottomOf="@+id/textView11"
                app:layout_constraintStart_toEndOf="@+id/textView12"
                android:layout_marginStart="22dp"/>

    </android.support.constraint.ConstraintLayout>

</LinearLayout>