<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:layout_marginLeft="20dp" android:layout_marginRight="20dp" android:orientation="vertical">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_title"
            android:gravity="center_vertical|center_horizontal"
            android:textSize="30sp"
            android:textStyle="bold"
            android:textColor="@color/textDark"
            android:layout_marginTop="35dp"
            android:fontFamily="@font/raleway_medium"/>
    <TextView
            android:text="John Doe"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:baselineAligned="false"
            android:textAlignment="gravity"
            android:layout_marginTop="35dp"
            android:textSize="18sp"
            android:textColor="@color/textDark"
            android:fontFamily="@font/raleway_regular"/>
    <TextView
            android:text="21 years old"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:baselineAligned="false"
            android:textAlignment="gravity"
            android:layout_marginTop="35dp"
            android:textSize="18sp"
            android:textColor="@color/textDark"
            android:fontFamily="@font/raleway_regular"/>
    <TextView
            android:text="johndoe@mail.com"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:baselineAligned="false"
            android:textAlignment="gravity"
            android:layout_marginTop="35dp"
            android:textSize="18sp"
            android:textColor="@color/textDark"
            android:fontFamily="@font/raleway_regular"/>
    <TextView
            android:text="@string/profile_password"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:baselineAligned="false"
            android:textAlignment="gravity"
            android:layout_marginTop="84dp"
            android:textSize="18sp"
            android:textColor="@color/textDark"
            android:fontFamily="@font/raleway_medium"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_marginTop="35dp"
            android:layout_height="wrap_content"
            tools:layout_editor_absoluteY="357dp">

        <ImageButton
                android:layout_width="20dp"
                android:layout_height="16dp"
                app:srcCompat="@drawable/ic_french_flag"
                android:id="@+id/imageButton"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent"/>
        <TextView
                android:text="@string/profile_language"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView3"
                app:layout_constraintStart_toEndOf="@+id/imageButton"
                android:layout_marginStart="8dp"
                android:textSize="18sp"
                android:textColor="@color/textDark"
                android:fontFamily="@font/raleway_medium" android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
    </android.support.constraint.ConstraintLayout>
    <TextView
            android:text="@string/profile_account"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:baselineAligned="false"
            android:textAlignment="gravity"
            android:layout_marginTop="35dp"
            android:textSize="18sp"
            android:textColor="@color/textDark"
            android:fontFamily="@font/raleway_medium"/>
    <TextView
            android:text="@string/profile_disconnect"
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:baselineAligned="false"
            android:textAlignment="gravity"
            android:layout_marginTop="35dp"
            android:textSize="18sp"
            android:textColor="@color/colorDisconnect"
            android:fontFamily="@font/raleway_bold"/>
</LinearLayout>
